Shifted event block content to flex align top, fixed passing blocks to remain centered

--- a/components/Day/Day.module.css
+++ b/components/Day/Day.module.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    /* overflow-y: auto; */
     overflow-x: hidden;
     padding: 0 10px;
     /* border: solid red 2px; */
@@ -37,7 +36,7 @@
 .fullScheduleOption {
 
 }
-.todosNotification {
+/* .todosNotification {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -51,7 +50,7 @@
 }
 .todosNotification p {
   margin: 0;
-}
+} */
 .activeOption {
   background-color: rgb(0, 94, 128);
   outline: solid 2px red;
@@ -72,8 +71,8 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
-    /* align-items: flex-start; */
+    /* align-items: center; */
+    align-items: flex-start;
     width: 100%;
     height: auto;
     /* height: 100px; */
@@ -85,9 +84,6 @@
     color: black;
     border-radius: 0
 }
-.eventWrapper:hover {
-  cursor: pointer;
-}
 .classEvent {
   background: linear-gradient(to right, #008ec7, #00578d);
   color: white;
@@ -96,6 +92,8 @@
   background-color: rgb(167, 255, 167);
   height: 25px;
   border-radius: 0px;
+  align-items: center;
+
 }
 .winEvent {
   background-color: rgb(250, 209, 127);
@@ -145,12 +143,28 @@
   width: 100%;
   text-align: center;
 }
+.passingEvent {
+  align-items: center !important;
+  height: 25px;
+  padding: 0 .25rem;
+}
+.passingEvent .eventContentWrapper {
+  height: 25px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  /* border: solid red 2px; */
+}
 .eventTitle {
   width: fit-content;
   left: 50%;
   transform: translateX(-50%);
   /* border: solid red 2px; */
   position: relative;
+}
+.passingEvent .eventTitle {
+  padding: 0;
+  margin: 0;
 }
 .eventTitle:not(.passingEvent .eventTitle) {
   margin: 0 0 1rem 0;
@@ -166,8 +180,6 @@
   margin: 0 1rem;
   padding: .25rem .5rem;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.7);
-  /* background-color: rgb(136, 227, 255);
-  color: white; */
 }
 .winEvent .timeAndDurationWrapper, .winEvent .duration, .winEvent .eventTitle {
   color: black;
@@ -176,10 +188,22 @@
 .passingEvent .eventTitle {
   font-size: 1rem;
 }
+.passingEvent .timeAndDurationWrapper {
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .passingEvent .duration, .passingEvent .timeAndDuration {
   color: black;
+  padding: 0;
   /* border: solid red 2px; */
 }
+
+
+
+
+
 
 /* TODO RELATED STYLES */
 
@@ -230,6 +254,9 @@
     width: 100%;
     padding: 5px;
     max-width: none;
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
   }
   .passingEvent {
     align-items: center;
@@ -245,8 +272,13 @@
     position: absolute;
     left: 0;
     top: 0;
-    /* border: solid red 1px; */
-    width: 100px; }
+    width: 100px;
+  }
+
+  .passingEvent .timeAndDurationWrapper {
+    height: 25px;
+    justify-content: center;
+  }
   .timeAndDuration {
     font-size: 1rem;
 
@@ -261,8 +293,8 @@
   }
   .prepPeriod {
     font-size: 1rem;
-    left: -4rem;
-    right: unset;
+    right: -3.5rem;
+    /* right: unset; */
     /* bottom: 0; */
     margin: 0;
   }
